--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 </head>
 <body class="bg-slate-100 dark:bg-slate-900 antialiased">
     <div id="root"></div>
-    <!-- Change script type to text/babel for Babel to transpile it -->
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <!-- Configure Babel presets for React(JSX) and TypeScript -->
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
