--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chalo ભણીએ !</title>
+    <script>
+      // Polyfill process.env for browser environments where it's not defined.
+      // This prevents a ReferenceError from crashing the entire app.
+      // The execution environment (like AI Studio) is expected to inject the actual API_KEY.
+      if (typeof window.process === 'undefined') {
+        window.process = { env: { API_KEY: undefined } };
+      }
+    </script>
     <link rel="icon" href="./favicon.ico" sizes="any" />
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
     <link rel="manifest" href="./manifest.json" />
