--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
         <div id="app-loader">Loading application...</div>
     </div>
     
-    <script type="module" src="./loader.js"></script>
+    <script defer src="./loader.js"></script>
 </body>
 </html>
