feat: Enable JSX and TypeScript transpilation in index.html
Adds the `data-presets="react,typescript"` attribute to the script tag in `index.html`. This allows Babel to correctly transpile JSX and TypeScript code for the application, enabling the use of React components and TypeScript features.

Also updates the cache version in `sw.js` to reflect this change.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     
     <!-- This script tag tells Babel to fetch and transpile our entire application -->
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
 
     <!-- Standard Service Worker Registration -->
     <script>
