feat: Introduce service worker and async script loading
Replaces direct Babel script inclusion in index.html with a dedicated loader.js script. This loader script first registers a service worker for offline caching and improved performance, then asynchronously loads Babel and the main application script (index.tsx). This change optimizes application startup and enables offline capabilities.

--- a/index.html
+++ b/index.html
@@ -118,8 +118,6 @@
       }
     </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
-<!-- Add Babel Standalone for in-browser JSX/TS transpilation -->
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="importmap">
 {
   "imports": {
@@ -133,8 +131,7 @@
         <div id="app-loader">Loading application...</div>
     </div>
     
-    <!-- This script tag tells Babel to fetch and transpile our entire application -->
-    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
+    <script src="./loader.js"></script>
 
 </body>
 </html>
