refactor: Update module imports to use .tsx extension
Changed all `.js` imports to `.tsx` to reflect the use of TypeScript and improve module resolution. This update applies to various components and the main application entry point.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
     
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.js"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
 
     <script>
       if ('serviceWorker' in navigator) {
