--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
       .animate-fade-in {
         animation: fadeIn 0.3s ease-in-out forwards;
       }
+      @keyframes fadeOut {
+        from { opacity: 1; }
+        to { opacity: 0; }
+      }
+      .animate-fade-out {
+        animation: fadeOut 0.2s ease-out forwards;
+      }
+      @keyframes slideInFromLeft {
+        from { transform: translateX(-100%); }
+        to { transform: translateX(0); }
+      }
+      .animate-slide-in-from-left {
+        animation: slideInFromLeft 0.3s ease-out forwards;
+      }
+      @keyframes slideOutToLeft {
+        from { transform: translateX(0); }
+        to { transform: translateX(-100%); }
+      }
+      .animate-slide-out-to-left {
+        animation: slideOutToLeft 0.2s ease-out forwards;
+      }
       @keyframes slideInFromRight {
         from {
             transform: translateX(100%);
