--- a/index.html
+++ b/index.html
@@ -124,13 +124,53 @@
       .bounce-1 { animation-delay: -0.32s; }
       .bounce-2 { animation-delay: -0.16s; }
       .bounce-3 { animation-delay: 0s; }
+
+      /* App Loader Animation */
       #app-loader {
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100vh;
-        font-size: 1.2rem;
-        color: #4a5568;
+        background-color: #f1f5f9; /* Tailwind slate-100 */
+      }
+      .loader-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      .loader-spinner {
+        width: 56px;
+        height: 56px;
+        border: 6px solid #e0e7ff; /* Tailwind indigo-100 */
+        border-top-color: #4f46e5; /* Tailwind indigo-600 */
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      .loader-text {
+        margin-top: 16px;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #1e293b; /* Tailwind slate-800 */
+        font-family: sans-serif;
+      }
+
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+      
+      /* Dark mode loader styles */
+      @media (prefers-color-scheme: dark) {
+        #app-loader {
+          background-color: #0f172a; /* Tailwind slate-900 */
+        }
+        .loader-spinner {
+          border-color: #3730a3; /* Tailwind indigo-800 */
+          border-top-color: #a5b4fc; /* Tailwind indigo-300 */
+        }
+        .loader-text {
+          color: #e2e8f0; /* Tailwind slate-200 */
+        }
       }
     </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
@@ -148,7 +188,12 @@
 </head>
 <body class="bg-slate-100 dark:bg-slate-900 antialiased">
     <div id="root">
-        <div id="app-loader">Loading application...</div>
+        <div id="app-loader">
+          <div class="loader-container">
+            <div class="loader-spinner"></div>
+            <div class="loader-text">Chalo ભણીએ !</div>
+          </div>
+        </div>
     </div>
     
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
